# Sexto-Universitario-Final

./: .gitignore  README.md  pyproject.toml  reporte_covid_20250830_164748.xlsx  reporte_covid_20250830_182611.xlsx  requirements.txt
covid_pipeline/: __init__.py  analisis_manual.py  assets.py  inspect_dataset.py  tabla_perfilado_manual.csv
